tests/error/poly_errors/non_linear6.err
Error: Expected a copyable type (at $FILE:19:8)
   | 
17 | @guppy
18 | def main() -> None:
19 |     foo(h)
   |         ^ Expected a copyable type, got type `qubit` which is not
   |           implicitly copyable

Guppy compilation failed due to 1 previous error
